# LapisChallenge

./: .gitignore  ReadMe
api/: Dockerfile  app.py  pyproject.toml
api/api/backtester/: __init__.py  backtester.py  optimizer_backtester.py
api/api/optimizer/: __init__.py  dummy.py  kelly.py
api/api/picker/: __init__.py  dummy.py  standards.py
api/api/preds/: base_model.py  dummy.py
api/api/scrapper/: __init__.py
api/api/scrapper/betclic/: __init__.py  odd_reader.py
api/api/stats/: __init__.py  get_stats.py
api/utils/: __init__.py  requests_body_interface.py  variables.py
scripts/: generate_simulate_dataset.py  get_fifa_dates_indicis.py  get_fifa_team_stats.py  get_raw_fifa_index.py  test.py
scripts/football/: get_fifa_dates_indicis.py  get_historical_odds.py
scripts/odds/: get_odds_oddsportal.py
terraform/: main.tf  variables_template.txt
web_app/: app.py  pyproject.toml
web_app/pages/: Optimizer.py  Prediction.py
web_app/pages/utils/: api_provider.py
web_app/utils/: api_provider.py  variables.py
