[tool.poetry]
name = "web-app"
version = "0.1.0"
description = ""
authors = ["Etienne <etienne.micheladj@gmail.com>"]
readme = "README.md"
packages = [{include = "web_app"}]

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.17.1"
dash-bootstrap-components = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
